# RealSR-NCNN-Android

./: .gitignore
RealSR-MNN-Android-GUI/: settings.gradle.kts
RealSR-MNN-Android-GUI/MNN_SR/: build.gradle.kts
RealSR-MNN-Android-GUI/MNN_SR/src/androidTest/java/com/mnn/realsr/: ExampleInstrumentedTest.kt
RealSR-MNN-Android-GUI/MNN_SR/src/main/java/com/mnn/realsr/: MnnSrNative.kt
RealSR-MNN-Android-GUI/MNN_SR/src/main/jni/: CMakeLists.txt
RealSR-MNN-Android-GUI/MNN_SR/src/test/java/com/mnn/realsr/: ExampleUnitTest.kt
RealSR-MNN-Android-GUI/app/: build.gradle.kts
RealSR-MNN-Android-GUI/app/src/androidTest/java/com/mnn/realsr/android/: ExampleInstrumentedTest.kt
RealSR-MNN-Android-GUI/app/src/androidTest/java/org/mnn/realsr/android/: ExampleInstrumentedTest.kt
RealSR-MNN-Android-GUI/app/src/main/: AndroidManifest.xml
RealSR-MNN-Android-GUI/app/src/main/java/com/mnn/realsr/: MnnSrNative.kt
RealSR-MNN-Android-GUI/app/src/main/java/org/mnn/realsr/: MnnSrNative.kt
RealSR-MNN-Android-GUI/app/src/main/res/values/: strings.xml  themes.xml
RealSR-MNN-Android-GUI/gradle/: libs.versions.toml
RealSR-MNN-Android-GUI/gradle/wrapper/: gradle-wrapper.properties
RealSR-NCNN-Android-CLI/CMake/: mnn.cmake
RealSR-NCNN-Android-CLI/MNN-SR/: build.gradle
RealSR-NCNN-Android-CLI/MNN-SR/src/main/jni/: CMakeLists.txt  main.cpp
RealSR-NCNN-Android-GUI/: build.gradle
RealSR-NCNN-Android-GUI/app/: build.gradle
RealSR-NCNN-Android-GUI/app/src/main/java/com/mnn/realsr/: MnnSrNative.kt
(+9 files in other folders)
