cmake_minimum_required(VERSION 3.5)
project(mnnsr_android)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(MNN_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../3rdparty/MNN)
set(MNNSR_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../RealSR-NCNN-Android-CLI/MNN-SR/src/main/jni)
if(NOT EXISTS ${MNN_DIR})
    message(FATAL_ERROR "MNN directory not found: ${MNN_DIR}")
endif()
if(NOT EXISTS ${MNNSR_DIR})
    message(FATAL_ERROR "MNNSR jni directory not found: ${MNNSR_DIR}")
endif()
add_subdirectory(${MNN_DIR} ${CMAKE_CURRENT_BINARY_DIR}/mnn)
add_subdirectory(${MNNSR_DIR} ${CMAKE_CURRENT_BINARY_DIR}/mnnsr)
